cluster-role.yaml


apiVersion: v1
kind: Namespace
metadata:
  
  labels:
    kubernetes.io/metadata.name: monitoring
  name: monitoring
  resourceVersion: "973"
  uid: 69143159-3898-41c2-a091-c8bf3c8715b8
spec:
  finalizers:
  - kubernetes
