service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: python3
  name: pod-usage-service
  namespace: monitoring
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8000
  type: LoadBalancer    
  selector:
    app: python3
status:
  loadBalancer: {}
