gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: python-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: python-vs
spec:
  hosts:
  - "*"
  gateways:
  - python-gateway
  http:
  - route:
    - destination:
        host: pod-usage-service
        port:
          number:  8000
